dom/media/ipc/RemoteDecoderManagerParent.cpp
@@ -115,7 +115,8 @@ PDMFactory& RemoteDecoderManagerParent::EnsurePDMFactory() {
 }
 
 bool RemoteDecoderManagerParent::CreateForContent(
-    Endpoint<PRemoteDecoderManagerParent>&& aEndpoint) {
+    Endpoint<PRemoteDecoderManagerParent>&& aEndpoint,
+    const bool aAllowHardwareDecoding) {
   MOZ_ASSERT(XRE_GetProcessType() == GeckoProcessType_RDD ||
              XRE_GetProcessType() == GeckoProcessType_GPU);
   MOZ_ASSERT(NS_IsMainThread());
@@ -125,8 +126,8 @@ bool RemoteDecoderManagerParent::CreateForContent(
   }
 
   RefPtr<RemoteDecoderManagerParent> parent =
-      new RemoteDecoderManagerParent(sRemoteDecoderManagerParentThread);
-
+      new RemoteDecoderManagerParent(sRemoteDecoderManagerParentThread,
+                                     aAllowHardwareDecoding);
   RefPtr<Runnable> task =
       NewRunnableMethod<Endpoint<PRemoteDecoderManagerParent>&&>(
           "dom::RemoteDecoderManagerParent::Open", parent,
@@ -156,8 +157,8 @@ bool RemoteDecoderManagerParent::CreateVideoBridgeToOtherProcess(
 }
 
 RemoteDecoderManagerParent::RemoteDecoderManagerParent(
-    nsISerialEventTarget* aThread)
-    : mThread(aThread) {
+    nsISerialEventTarget* aThread, const bool aAllowHardwareDecoding)
+    : mThread(aThread), mAllowHardwareDecoding(aAllowHardwareDecoding) {
   MOZ_COUNT_CTOR(RemoteDecoderManagerParent);
   auto& registrar = XRE_IsGPUProcess()
                         ? GPUParent::GetSingleton()->AsyncShutdownService()
